# py-chocolatey

./: CHANGES.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg
#arch/: .prepare_help.py
docs/: _prepare_help.py  help.txt  help_apikey.txt  help_cache.txt  help_config.txt  help_export.txt  help_feature.txt  help_help.txt  help_info.txt  help_install.txt  help_list.txt  help_new.txt  help_outdated.txt  help_pack.txt  help_pin.txt  help_push.txt  help_rule.txt  help_search.txt  help_source.txt  help_template.txt  help_uninstall.txt  help_unpackself.txt  help_upgrade.txt  index.rst
docs/.org/: help.txt  help_apikey.txt  help_cache.txt  help_config.txt  help_export.txt  help_feature.txt  help_info.txt  help_install.txt  help_license.txt  help_list.txt  help_new.txt  help_outdated.txt  help_pack.txt  help_pin.txt  help_push.txt  help_rule.txt  help_search.txt  help_source.txt  help_support.txt  help_template.txt  help_uninstall.txt  help_upgrade.txt
src/chocolatey/: __about__.py  __init__.py  _chocolatey.py  _chocolatey_cmd.py  _run.py
src/chocolatey/choco-setup/: 7za.exe.dsc.txt  chocolatey.2.2.2.nupkg.dsc.txt  chocolatey.2.3.0.nupkg.dsc.txt  chocolatey.2.4.1.nupkg.dsc.txt  chocolatey.2.4.2.nupkg.dsc.txt  chocolatey.2.4.3.nupkg.dsc.txt  chocolatey.2.5.1.nupkg.dsc.txt  chocolatey.2.6.0.nupkg.dsc.txt  install.ps1  install.ps1.dsc.txt
tests/: __init__.py  __main__.py  __notes_.txt  _util.py  test_chocolatey.py  test_chocolatey_cmd.py  test_main.py  tman_test.py  z_test.py
tests/data/: py-chocolatey.Test1.1.0.1.nupkg  py-chocolatey.Test2.1.0.2.nupkg  py-chocolatey.Test3.1.0.3.nupkg  py_choco.Test1.1.0.1.nupkg  py_choco.Test2.1.0.2.nupkg  py_choco.Test3.1.0.3.nupkg
tests/data/py-chocolatey.Test0/: CHANGES.rst  py-chocolatey.Test0.nuspec
tests/data/py-chocolatey.Test1/: CHANGES.rst  py-chocolatey.Test1.nuspec
tests/data/py-chocolatey.Test2/: CHANGES.rst  py-chocolatey.Test2.nuspec
tests/data/py-chocolatey.Test3/: py-chocolatey.Test3.nuspec
tests/data/py-chocolatey.Test4/: CHANGES.rst  py-chocolatey.Test4.nuspec
tests/data/py-chocolatey.Test5/: py-chocolatey.Test5.nuspec
tests/data/py-chocolatey.test_template/: py-chocolatey.test_template.nuspec
tests/data/py-chocolatey.test_template/tools/: chocolateyInstall.ps1
tests/data/py_choco.Test1/: py_choco.Test1.nuspec
tests/data/py_choco.Test2/: py_choco.Test2.nuspec
tests/data/py_choco.Test3/: CHANGES.rst  py_choco.Test3.nuspec
tests/data/py_choco.Test4/: py_choco.Test4.nuspec
tests/data/py_choco.Test5/: CHANGES.rst  py_choco.Test5.nuspec
